[gd_scene load_steps=5 format=3 uid="uid://dv6iwhccuhn3k"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_dmrkw"]
[ext_resource type="Script" path="res://ParallaxBackground.gd" id="2_2q3yk"]
[ext_resource type="Texture2D" uid="uid://bnoy5lbmx0gy0" path="res://Assets/Screenshot 2023-10-16 at 10.20.07 AM.png" id="3_nkdem"]
[ext_resource type="AudioStream" uid="uid://dl8omxsddeqok" path="res://Assets/menu.mp3" id="4_6ng0n"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_dmrkw")
metadata/_edit_horizontal_guides_ = []

[node name="TitleLabel" type="Label" parent="."]
offset_left = 469.0
offset_top = -6.0
offset_right = 682.0
offset_bottom = 38.0
theme_type_variation = &"HeaderLarge"
text = "Pogo Jump"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Options" type="VFlowContainer" parent="."]
offset_left = 474.0
offset_top = 102.0
offset_right = 683.0
offset_bottom = 612.0
alignment = 1

[node name="StartButton" type="Button" parent="Options"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Start "

[node name="Fullscreen" type="Button" parent="Options"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Fullscreen
"

[node name="Quit" type="Button" parent="Options"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
text = "Quit
"

[node name="Controls" type="Button" parent="Options"]
layout_mode = 2
text = "Controls and instructions"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_2q3yk")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1700, 2.08165e-12)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(831.5, 277.604)
scale = Vector2(1.10155, 1.10441)
texture = ExtResource("3_nkdem")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6ng0n")
volume_db = 6.0
autoplay = true

[connection signal="pressed" from="Options/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Options/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Options/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/Controls" to="." method="_on_controls_pressed"]
